my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WASTRUNC/WASTRUNC.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:17:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:27:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'uint2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:29:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:31:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int1', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:38:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:40:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int1', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:44:15: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'uint2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:47:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'uint2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:49:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int2', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:51:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'int1', and will thus be truncated
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WASTRUNC.dml:63:9: warning WASTRUNC: The assignment source is a constant value which does not fit the assign target of type 'uint2', and will thus be truncated
